--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -9,23 +9,22 @@
     font-family: "Poppins", sans-serif;
     background-color: white; /* Light mode background */
     transition: background 0.3s ease;
+    overflow: hidden;
 }
 
-/* Background Video */
-.background-video {
+/* Background Image */
+.background-image {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    background-size: cover;
+    background-position: center;
     z-index: -1;
+    transition: opacity 2s ease;
 }
 
-/* Dark Mode Background */
-.dark-mode .home-container {
-    background-color: black;
-}
 
 /* Hero Content */
 .hero-content {
@@ -39,7 +38,7 @@
     font-size: 3rem;
     font-weight: bold;
     margin-bottom: 10px;
-    color: black; /* Light mode text */
+    color:white; /* Light mode text */
 }
 
 /* Dark Mode Text */
@@ -51,7 +50,7 @@
 .hero-content p {
     font-size: 1.2rem;
     margin-bottom: 20px;
-    color: #666; /* Light mode text */
+    color: #ddd; /* Light mode text */
 }
 
 /* Dark Mode Subtitle */
@@ -85,9 +84,9 @@
 /* Secondary Button */
 .btn-secondary {
     background-color: transparent;
-    border: 2px solid black;
+    border: 2px solid white;
     padding: 10px 22px;
-    color: black;
+    color: white;
 }
 
 /* Secondary Button in Dark Mode */
@@ -108,7 +107,7 @@
     bottom: 20px;
     font-size: 18px;
     animation: bounce 2s infinite;
-    color: black;
+    color: white;
 }
 
 /* Dark Mode Scroll Down */
